css/style.css
/* ... */
h1, h2 {
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
}

h1 {
  font-size:1.999em;
}


h2 {
  font-size: 1.414em;
  margin-top: 1.414em;
  margin-bottom: 1.414em;
}

h3 {
  font-size: 1.414em;
}

@media only screen and (min-width:768px) {
  body {
    font-size: 18px;
  }

  h1 {
  font-size: 2.827em;
  }

  h2 {
    font-size: 1.999em;
    margin-top: 1.414em;
    margin-bottom: 1.414em;
  }

  h3 {
  font-size: 1.414em;
  }

}

p {

}

a {
  color: #d00000;
  color: var(--dark-red-color);
  text-decoration: none;
}

a:hover {
  color: #ed1b24;
  color: var(--red-color);
  text-decoration: none;
}





/*------------------------------------*\
  #SHARED
\*------------------------------------*/

.section-break {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 6vw;
}

.section-title {
  text-align: center;
  position: relative;
}

@media only screen and (min-width: 768px) {
  .section-title:before {
    position: absolute;
    top: 0.83em;
    left: 15%;
    content: '';
    display: block;
    height: 2px;
    width: 25%;
    background-color: #B5B5B5;
  }

  .section-title:after {
    position: absolute;
    top: 0.83em;
    left: 60%;
    content: '';
    display: block;
    height: 2px;
    width: 25%;
    background-color: #B5B5B5;
  }
}

@media only screen and (min-width: 768px) {
  .section-title:before {
    position: absolute;
    top: 0.83em;
    left: 17%;
    content: '';
    display: block;
    height: 2px;
    width: 25%;
    background-color: #B5B5B5;
  }

.section-title:after {
    position: absolute;
    top: 0.83em;
    left: 58%;
    content: '';
    display: block;
    height: 2px;
    width: 25%;
    background-color: #B5B5B5;
  }
}

.content-header {
  position: relative;
  background: #9d9d9d;
  padding: 120px 0 60px;
}

@media only screen and (min-width: 768px) {
  .content-header {
    padding-bottom: 100px;
  }
}

.content-header-title {
  color: #fff;
}

.content-section {
  padding-top: 40px;
  padding-bottom: 60px;
}

.content-section-dark {
  background: #060709;
  background: var(--black-color);
  color: #fff;
}

.content-callout {
  font-size: 1.414em;
  color: #d00000;
  color: var(--dark-red-color);
  margin-bottom: 2em;
}

.content-callout-secondary:last-of-type {
  padding-bottom: 40px;
}

.content-section-title {
  margin-top: 1em;
  margin-bottom: 2em;
}

.content-section-half {
  margin-bottom: 60px;
}





/*------------------------------------*\
  #HELPER
\*------------------------------------*/

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}


/*------------------------------------*\
  #COMPONENTS
\*------------------------------------*/

/* FORMS */

.form {
  display: flex;
  flex-flow: column nowrap;
}

.form-margin {
  margin-top: 20px;
}

.form-field {
  padding: 8px 16px;
  background: #B5B6B8;
  background: var(--light-gray-color);
  border: 0;
}

.form-submit {
  margin-top: 40px;
  margin-bottom: 60px;
}

/* BUTTONS */

.button {
  display: inline-block;
  text-transform: uppercase;
  border: 0;
  font-size: 1.414em;
  padding: 8px 16px;
  transition: all 0.5s ease-in;
}

.button:hover {
  text-decoration: none;
}

.button-primary {
  background: #ed1b24;
  background: var(--red-color);
  color: #fff;
}

.button-primary:hover {
  background: #d00000;
  background: var(--dark-red-color);
  color: #fff;
}

.button-secondary {
  background: #ffcd2e;
  background: var(--yellow-color);
  color: #060709;
  color: var(--black-color);
}

.button-secondary:hover {
  background: #f8922d;
  background: var(--light-orange-color);
  color: #060709;
  color: var(--black-color);
}

.button-tertiary {
  background: #060709;
  background: var(--black-color);
  color: #fff;
}

/* ICONS */





/*------------------------------------*\
  #MODULES
\*------------------------------------*/

/* FLEXBOX */

.flex-horizontal {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  width: 100%;
}

.flex-half,
.flex-third,
.flex-two-thirds,
.flex-fourth,
.flex-three-fourths,
.flex-fourth-full {
  flex: 1 0 100%;
}

.flex-half-mob {
  flex: 0 0 48%;
  width: 48%;
}

.flex-image {
  flex-shrink: 0;
  width: 100%;
  height: auto;
}

@media only screen and (min-width: 768px) {
  .flex-half {
    flex: 0 0 48%;
    width: 48%;
    max-width: 48%;
  }
  .flex-third {
    flex: 0 0 30.66%;
    width: 30.66%;
    max-width: 30.66%;
  }
  .flex-two-thirds {
    flex: 0 0 65.33%;
    width: 65.33%;
    max-width: 65.33%;
  }
  .flex-fourth {
    flex: 0 0 22%;
    width: 22%;
    max-width: 22%;
  }
  .flex-three-fourths {
    flex: 0 0 74%;
    width: 74%;
    max-width: 74%;
  }
  .flex-fourth-full {
    flex: 0 0 25%;
    width: 25%;
    max-width: 25%;
  }
}

/* NAVIGATION */

header {
  position: absolute;
  width: 100vw;
  z-index: 2;
}

.nav {
  display: flex;
  justify-content: space-between;
  margin-top: 1em;
  font-size: 0.707em;
}

.nav-logo {
  width: 140px;
  height: 107px;
}

@media only screen and (min-width:768px) {
  .nav-logo {
    width: 200px;
    height: 148px;
  }
}

@media only screen and (min-width:1200px) {
  .nav-logo {
    width: 280px;
    height: 148px;
  }
}

.nav-links {
  list-style-type: none;
  margin-left: auto;
}

.nav-links li {
  display: none;
  transition: background 0.2s ease-in;
}

.nav-links li:hover {
  background: #ed1b24;
  background: var(--red-color);
}

.nav-links a {
  color: #fff;
}

.nav-icon {
  display: block;
  position: absolute;
  width: 30px;
  height: 26px;
  cursor: pointer;
  top: 2em;
  right: 2em;
}

.nav-bar,
.nav-bar:after,
.nav-bar:before {
  width: 30px;
  height: 3px;
}

.nav-bar {
  position: relative;
  transform: translateY(10px);
  background: rgba(255, 255, 255, 1);
  transition: all 0ms 300ms;
}
  
.nav-icon.nav-close .nav-bar {
  background: rgba(255, 255, 255, 0); 
}
/* ... */

